Update tailwind for preventing double tap zoom on mobile

--- a/src/minicalendar.Pwa/wwwroot/css/tailwind.css
+++ b/src/minicalendar.Pwa/wwwroot/css/tailwind.css
@@ -1030,6 +1030,10 @@ video {
   cursor: pointer;
 }
 
+.touch-none {
+  touch-action: none;
+}
+
 .select-none {
   -webkit-user-select: none;
      -moz-user-select: none;
